fix: invisible submenu on homepage

--- a/src/styles/Header.module.scss
+++ b/src/styles/Header.module.scss
@@ -34,6 +34,7 @@ nav {
                 color: $grey;
             }
             ul {
+                z-index: 10;
                 border-left: 1px solid $grey;
                 padding: 0;
                 flex-direction: column;
